[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -2, 0, 0, 0, 0, 480, 1, 0, 0, 0, 0, 480, 721, 0, 0, 0, 0, 1, 721, 0, 0, 0, 0, 0, -2 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Enemy = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 338 )

[node name="timer_init" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="score_time" type="Timer" parent="."]

[node name="timer_enemy" type="Timer" parent="."]
wait_time = 0.5

[node name="starting_position" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="enemy_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawn_enemy" type="PathFollow2D" parent="enemy_path"]
position = Vector2( 0, -2 )
rotation = 0.00624995

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="_on_game_over"]
[connection signal="timeout" from="timer_init" to="." method="_on_timer_init_timeout"]
[connection signal="timeout" from="score_time" to="." method="_on_score_time_timeout"]
[connection signal="timeout" from="timer_enemy" to="." method="_on_timer_enemy_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
